--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "BackEnd",
+  "name": "back-end",
+  "jest": {
+    "testEnvironment": "node",
+    "verbose": true
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch --verbose",
     "server": "nodemon index.js",
     "try": "nodemon index.js",
     "start": "node index.js"
